<resources>
    <string name="app_name">金信宝</string>
    <string name="hello">您好！</string>
    <string name="welcome">欢迎来到黄金钱包登录或注册</string>
    <string name="phonenumber">手机号   </string>
    <string name="input_phonenumber">请输入手机号码</string>
    <string name="next">下一步</string>
    <string name="safeinfo">用户信息加密存储保障您的隐私安全</string>
    <string name="first_regist">初次见面，注册有礼</string>
    <string name="vfc_has_send">验证码已发送到</string>
    <string name="vfc">验证码</string>
    <string name="get_vfc">获取验证码</string>
    <string name="input_vfc">请输入短信验证码</string>
    <string name="miss_vfc">未收到短信？</string>
    <string name="audio_get">语音获取</string>
    <string name="resend">重新发送</string>
    <string name="countdown">60s后重新发送</string>
    <string name="welcome_to_back">欢迎回来！</string>
    <string name="sendinfo">您的收益是我们共同的喜悦</string>
    <string name="password">密码</string>
    <string name="input_password">请输入密码</string>
    <string name="vfc_login">验证码登录</string>
    <string name="logining">正在登录</string>
    <string name="login">登录</string>
    <string name="regist_tv">立即注册</string>
    <string name="loading">请稍后</string>
    <string name="send_vfc_to">验证码已发送到</string>
    <string name="tab_0">首页</string>
    <string name="tab_1">产品</string>
    <string name="tab_2">行情</string>
    <string name="tab_3">我的</string>
    <string name="realtime_gold_price">实时金价[元/克]</string>
    <string name="buy">买入</string>
    <string name="know">一分钟了解</string>
    <string name="safe">安全保障</string>
    <string name="novice">新手专享</string>
    <string name="financing_1_name">安心计划30天</string>
    <string name="is_novice">新手</string>
    <string name="financing_updown_num">7%+5%</string>
    <string name="target_num_annual_revenue">12.0%</string>
    <string name="target_annual_revenue">目标年化回报率</string>
    <string name="year_rate">年化利率</string>
    <string name="effective_date">14天后生效</string>
    <string name="more_product">查看更多产品</string>
    <string name="know_wallet">了解钱包</string>
    <string name="monthly_operating_report">运营月报</string>
    <string name="activity">热门活动</string>
    <string name="quarter">金企合作季报</string>
    <string name="accumulative_transaction_tv">累计交易额（元）</string>
    <string name="market_danger">市场有风险 投资需谨慎</string>
    <string name="insurance">点击查看保单样本</string>
    <string name="newcomer_raise">新手周周升息</string>
    <string name="text2">持有黄金 保值增值</string>
    <string name="text3">稳定生产 省时省力</string>


    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading1">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="wallet_balance">钱包可用余额</string>
    <string name="weight">克重</string>
    <string name="input_buy_weight">输入购买重量</string>
    <string name="change_to_buy_with_price"> 切换为\n按金额买</string>
    <string name="expect_price">预计金额</string>
    <string name="caculate_rate_date">计息日</string>
    <string name="check_notice">查看买入提示</string>
    <string name="check_sell_out_notice">查看卖出提示</string>
    <string name="have_read">我已阅读并同意</string>
    <string name="golden_protocal">流动金-黄金消费综合服务协议</string>
    <string name="read_agree_golden_protocal">阅读并同意流动金-黄金消费综合服务协议</string>
    <string name="china_unicom">中华联合财险承保用户黄金财产安全，请放心交易</string>
    <string name="confirm_order">确认下单</string>
    <string name="confirm_sell">确认卖出</string>
    <string name="confirm">确认</string>
    <string name="bind_info">黄金钱包只支持绑定一张银行卡，该银行卡将是您在黄金钱包唯一的资金出口。即使手机丢失、账号被盗，您的钱也只能回到您自己的银行卡中，最大程度保障您的资产安全。</string>
    <string name="bind_notice">绑卡提示</string>
    <string name="bind_info_title">请绑定本人名下的储蓄卡</string>
    <string name="input_card_id">请输入您的储蓄卡号</string>
    <string name="check">查看</string>
    <string name="support_bank">支持的银行及限额</string>
    <string name="next_step">下一步</string>
    <string name="bank_phonenumber">银行预留手机号</string>
    <string name="input_bank_phonenumber">请输入银行预留手机号</string>
    <string name="one_key_pay_protocal">《一键支付协议》</string>
    <string name="submit">提交</string>
    <string name="revolving_funds">流动金</string>
    <string name="bind_card">绑定银行卡</string>
    <string name="authentication_rightnow">立即认证，即可免费开启账户安全保障</string>
    <string name="auth_notice_info">实名认证将您的资产与个人绑定，保障账户资金安\n全。\n认证成功后，将为您申请与个人身份绑定的电子签\n名证书，确保您和黄金钱包签订的投资协议合法有\n效。</string>
    <string name="auth_notice">认证提示</string>
    <string name="please_auth">您还没有实名认证，绑卡前需要先进行实名认证</string>
    <string name="input_name">请输入真实姓名</string>
    <string name="input_id">请输入身份证号</string>
    <string name="personal_infomation_by_public_security_organization">个人信息由公安机关验证</string>
    <string name="golden_wallet_protocal">黄金钱包服务协议</string>
    <string name="auth_title">实名认证</string>
    <string name="now_goden_price">实时金价</string>
    <string name="floute_price">流动金</string>
    <string name="expect_weight">预计克重</string>
    <string name="buy_order_info">由于金价实时变动，实际购买克重可能与预计克重有所偏差</string>
    <string name="buy_order">买单金额</string>
    <string name="order_total_price">订单总额</string>
    <string name="coupon">优惠券</string>
    <string name="time_pay_notice">请在90秒内完成在线支付</string>
    <string name="buy_order_info2">易宝、中华联合财险共同保障用户交易资金安全</string>
    <string name="need_charge">需要充值：</string>
    <string name="goto_charge">前往充值</string>
    <string name="charge">充值</string>
    <string name="dialog_message">提示</string>
    <string name="friendly_dialog_message">温馨提示</string>
    <string name="SERVERERRORSTR">服务异常</string>
    <string name="USER_OPEN_ACCOUNT_FAILED">注册失败</string>
    <string name="USER_NOT_OPEN_ACCOUNT">用户尚未注册</string>
    <string name="USER_PASSWORD_ERROR">密码输入错误</string>
    <string name="USER_DOES_NOT_EXIST">用户不存在</string>
    <string name="PRODUCT_DOES_NOT_EXIST">产品不存在</string>
    <string name="OTHER_REASON_FAIL">其他原因错误</string>
    <string name="request_permissions">请求权限</string>
    <string name="necessary_permissions">程序运行必要权限</string>
    <string name="MISS_MISTAKES">未知错误</string>
    <string name="buy_ok">成功买入黄金</string>
    <string name="sell_ok">卖金成功</string>
    <string name="pay">支付</string>
    <string name="receive">收入</string>
    <string name="done">完成</string>
    <string name="setting">设置</string>

</resources>
