<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.mga.financing.mvp.main.MainActivity">

    <include
        android:id="@+id/login_toolbar"
        layout="@layout/toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/login_toolbar"
        android:layout_marginTop="@dimen/qb_px_25"
        android:paddingLeft="@dimen/toleft"
        android:paddingRight="@dimen/toright">

        <TextView
            android:id="@+id/hello_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_back"
            android:textSize="@dimen/large2"
            android:textStyle="bold"
            android:textColor="@color/black_large_text"
            />

        <TextView
            android:id="@+id/welcome_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hello_tv"
            android:text="@string/sendinfo"
            android:textColor="@color/grey_middle1_text"
            android:layout_marginTop="@dimen/qb_px_18"
            android:textSize="@dimen/middle2"
            />
        <RelativeLayout
            android:id="@+id/login_rl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome_tv"
            android:layout_marginTop="@dimen/qb_px_74"
            >
            <TextView
                android:id="@+id/phonenumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="@dimen/middle2"
                android:textColor="@color/black_middle1_text"
                />
            <com.mga.financing.ui.XEditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/phonenumber"
                android:hint="@string/input_password"
                android:layout_marginLeft="@dimen/qb_px_10"
                android:background="@null"
                android:textColorHint="@color/grey_middle1_text_input"
                android:textSize="@dimen/middle2"
                android:inputType="textPassword"
                app:x_clearDrawable="@drawable/icon_text_clear"
                app:x_hidePwdDrawable="@drawable/close_eye_icon"
                app:x_showPwdDrawable="@drawable/open_eye_icon"
                />
            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_1"
                android:background="@color/orange_line"
                android:layout_marginTop="@dimen/qb_px_6"
                android:layout_below="@id/phonenumber"

                />
            <TextView
                android:id="@+id/login_tv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_45"
                android:layout_below="@id/line"
                android:layout_marginTop="@dimen/qb_px_14"
                android:background="@drawable/shape_login_btn_unennable"
                android:text="@string/login"
                android:gravity="center"
                android:enabled="false"
                android:textSize="@dimen/middle2"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/to_vfc_login_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_tv"
                android:layout_marginTop="@dimen/qb_px_14"
                android:text="@string/vfc_login"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/middle2"
                android:textColor="@color/orange_line"/>
        </RelativeLayout>
        <ImageView
            android:id="@+id/ali_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_aliyun"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/safeinfo_tv"
            android:layout_marginBottom="@dimen/qb_px_6"
            />
        <TextView
            android:id="@+id/safeinfo_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/safeinfo"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/qb_px_16"
            android:textSize="@dimen/small"
            android:textColor="@color/grey_middle1_text"
            />


    </RelativeLayout>
</RelativeLayout>
