<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include
        android:id="@+id/idcard_tb"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_bg"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange_banner_bg"
            android:gravity="center_vertical"
            android:paddingBottom="5dp"
            android:paddingLeft="@dimen/toleft"
            android:paddingTop="5dp"
            >

            <ImageView
                android:id="@+id/iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/gold_gantanhao"/>

            <TextView
                android:id="@+id/wallet_balance_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/iv"
                android:text="@string/authentication_rightnow"
                android:textColor="@color/orange_banner_text"
                />


        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/white"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/auth_notice_info"/>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#FEA94C"
                android:paddingBottom="2dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="2dp"
                android:text="@string/auth_notice"
                android:textColor="@color/white"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/toleft"
            android:paddingRight="@dimen/toright">

            <EditText
                android:id="@+id/input_name_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@null"
                android:hint="@string/input_name"
                />

        </LinearLayout>

        <View
            style="@style/style_normal_line"
            android:layout_marginLeft="@dimen/toleft"
            android:layout_marginRight="@dimen/toright"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/toleft"
            android:paddingRight="@dimen/toright">

            <EditText
                android:id="@+id/input_id_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@null"
                android:inputType="number"
                android:hint="@string/input_id"
                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/personal_infomation_by_public_security_organization"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey_fragment_buy_background"


            >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/submit_tv"
                android:layout_marginBottom="10dp"
                >

                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/toleft"
                    android:layout_marginTop="7dp"
                    android:checked="true"
                    />

                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="15dp"
                    android:layout_toRightOf="@+id/checkbox"
                    android:text="@string/have_read"
                    />

                <TextView
                    android:id="@+id/golden_wallet_protocal_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_toRightOf="@id/text"
                    android:text="@string/golden_wallet_protocal"
                    android:textColor="@color/orange_change_state"
                    />
            </RelativeLayout>

            <TextView
                android:id="@+id/submit_tv"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@color/orange_btn"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="@dimen/middle3"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>