<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mga.financing.mvp.main.MainActivity">

    <include
        android:id="@+id/login_toolbar"
        layout="@layout/toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/login_toolbar"
        android:layout_marginTop="@dimen/qb_px_25"
        android:paddingLeft="@dimen/toleft"
        android:paddingRight="@dimen/toright">

        <TextView
            android:id="@+id/hello_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_regist"
            android:textColor="@color/black_large_text"
            android:textSize="@dimen/large2"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/welcome_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hello_tv"
            android:layout_marginTop="@dimen/qb_px_18"
            android:text="@string/vfc_has_send"
            android:textColor="@color/grey_middle1_text"
            android:textSize="@dimen/middle2"
            />

        <TextView
            android:id="@+id/phonenumber_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hello_tv"
            android:layout_marginTop="@dimen/qb_px_18"
            android:layout_toRightOf="@+id/welcome_tv"
            android:text="13516725164"
            android:textColor="@color/black_middle1_text"
            android:textSize="@dimen/middle2"
            />

        <RelativeLayout
            android:id="@+id/login_rl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome_tv"
            android:layout_marginTop="@dimen/qb_px_74"
            >

            <RelativeLayout
                android:id="@+id/rl1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/vfc_tv"
                    android:layout_width="@dimen/qb_px_60"
                    android:layout_height="wrap_content"
                    android:text="@string/vfc"
                    android:textColor="@color/black_middle1_text"
                    android:textSize="@dimen/middle2"
                    />

                <com.mga.financing.ui.XEditText
                    android:id="@+id/regist_vfc_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/qb_px_10"
                    android:layout_toRightOf="@+id/vfc_tv"
                    android:background="@null"
                    android:hint="@string/input_vfc"
                    android:inputType="number"
                    android:textColorHint="@color/grey_middle1_text_input"
                    android:textSize="@dimen/middle2"
                    app:x_clearDrawable="@drawable/icon_text_clear"
                    app:x_hidePwdDrawable="@drawable/close_eye_icon"
                    app:x_showPwdDrawable="@drawable/open_eye_icon"
                    />

                <View
                    android:id="@+id/line"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/qb_px_1"
                    android:layout_below="@id/vfc_tv"
                    android:layout_marginTop="@dimen/qb_px_6"
                    android:background="@color/orange_line"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl2"
                android:layout_below="@+id/rl1"
                android:layout_marginTop="@dimen/qb_px_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/password_tv"
                    android:layout_width="@dimen/qb_px_60"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/black_middle1_text"
                    android:textSize="@dimen/middle2"
                    />

                <com.mga.financing.ui.XEditText
                    android:id="@+id/regist_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/qb_px_10"
                    android:layout_toRightOf="@+id/password_tv"
                    android:background="@null"
                    android:hint="@string/input_password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/grey_middle1_text_input"
                    android:textSize="@dimen/middle2"
                    app:x_clearDrawable="@drawable/icon_text_clear"
                    app:x_hidePwdDrawable="@drawable/close_eye_icon"
                    app:x_showPwdDrawable="@drawable/open_eye_icon"
                    />

                <View
                    android:id="@+id/line2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/qb_px_1"
                    android:layout_below="@id/password_tv"
                    android:layout_marginTop="@dimen/qb_px_6"
                    android:background="@color/orange_line"
                    />
            </RelativeLayout>

            <TextView
                android:id="@+id/miss_vfc_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl2"
                android:layout_marginTop="@dimen/qb_px_18"
                android:text="@string/miss_vfc"
                android:textColor="@color/grey_middle1_text"
                android:textSize="@dimen/middle1"
                />

            <TextView
                android:id="@+id/audio_get_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl2"
                android:layout_marginTop="@dimen/qb_px_18"
                android:layout_toRightOf="@id/miss_vfc_tv"
                android:text="@string/audio_get"
                android:textColor="@color/orange_line"
                android:textSize="@dimen/middle1"
                />

            <TextView
                android:id="@+id/countdown_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/rl2"
                android:layout_marginTop="@dimen/qb_px_18"
                android:text="@string/countdown"
                android:textColor="@color/grey_middle1_text"
                android:textSize="@dimen/middle1"
                />


            <TextView
                android:id="@+id/regist_tv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_45"
                android:layout_below="@id/miss_vfc_tv"
                android:layout_marginTop="@dimen/qb_px_14"
                android:background="@drawable/shape_login_btn_ennable"
                android:gravity="center"
                android:text="@string/regist_tv"
                android:textColor="@color/white"
                android:textSize="@dimen/middle2"/>
        </RelativeLayout>

        <ImageView
            android:id="@+id/ali_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/safeinfo_tv"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/qb_px_6"
            android:src="@drawable/logo_aliyun"
            />

        <TextView
            android:id="@+id/safeinfo_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/qb_px_16"
            android:text="@string/safeinfo"
            android:textColor="@color/grey_middle1_text"
            android:textSize="@dimen/small"
            />


    </RelativeLayout>
</RelativeLayout>
